syntax = "proto3";

package user;

option go_package = "github.com/tird4d/go-microservices/user_service/proto;proto";

import "google/protobuf/wrappers.proto";



service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc GetUserCredential(GetUserCredentialRequest) returns (UserCredentialResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message RegisterResponse {
  string id = 1;
  string message = 2;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message GetUserCredentialRequest{
  string email = 1;
}

message UserCredentialResponse {
  string id = 1;
  string email = 2;
  string password = 3;
  string role = 4;

}
  
message GetAllUsersRequest {
  int64 page = 1;     
  int64 page_size = 2; 
}

message GetAllUsersResponse {
  repeated UserResponse users = 1;
  int64 total = 2;        
  int64 current_page = 3;
  int64 total_pages = 4;
}

message UpdateUserRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue role = 4;
}

message UpdateUserResponse {
  string id = 1;
  string message = 2;
}

message DeleteUserRequest{
  string id = 1;
}

message DeleteUserResponse{
  string id = 1;
  int64 deletedCount = 2;
  string message = 3;
}